# mcp_client_rust

./: .gitignore  .repo_ignore  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  config.json
mcp_rust_sdk/: Cargo.toml  README.md
mcp_rust_sdk/src/: types.rs
mcp_rust_sdk/src/client/: builder.rs  mod.rs  test.rs
mcp_rust_sdk/src/transport/: mod.rs  stdio.rs
src/: chat.rs  config.rs  function_def.rs  lib.rs  main.rs  mcp_client_manager.rs  protocol.rs  tool_def.rs  types.rs
src/client/: builder.rs  mod.rs  test.rs
src/server/: mod.rs
src/tests/: mod.rs
src/transport/: mod.rs  stdio.rs
