[package]
name = "sample_rs_mcp"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# mcp_rust_sdk = "0.1.0"
mcp_rust_sdk = { path = "./mcp_rust_sdk" }

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
async-openai = "0.26.0"


[build-dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
mcp_rust_sdk = { path = "./mcp_rust_sdk" }                        # Adjust the path as needed
