[package]
name = "mcp_client_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# Change this line to match the actual package name
mcp_client_rs = { path = "./mcp_rust_sdk" }

tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
async-openai = "0.26.0"
colored = "2.1.0"


[build-dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
mcp_client_rs = { path = "./mcp_rust_sdk" }
