[package]
name = "mcp_client_rs"
version = "0.1.3"
edition = "2021"
description = "Rust client SDK for the Model Context Protocol (MCP)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/darinmilner/mcp-client-rust"
documentation = "https://github.com/darinmilner/mcp-client-rust"
keywords = ["mcp", "client", "protocol", "machine-learning", "ai"]
categories = ["api-bindings", "development-tools"]

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42.0", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0.9"
futures = "0.3"
bytes = "1.0"
tracing = "0.1"
url = "2.5"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
async-stream = "0.3"
