[package]
name = "mcp_client_rs"
version = "0.1.4"
edition = "2021"
description = "Rust client SDK for the Model Context Protocol (MCP)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/darinmilner/mcp-client-rust"
documentation = "https://github.com/darinmilner/mcp-client-rust"
keywords = ["mcp", "client", "protocol", "machine-learning", "ai"]
categories = ["api-bindings", "development-tools"]

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42.0", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0.9"
futures = "0.3"
tracing = "0.1"
